# pochta-drive-app

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  config.py  custom_formatter.py  db_service.py  drive.py  pyproject.toml  regexes.py  wsgi.py
backend/migrations/: init.js
backend/models/: file.py
nginx/conf/: app.conf
nginx/ssl/certs/: api.pochta-app.crt
nginx/ssl/private/: api.pochta-app.key
